# waifu_bot

./: .gitignore  Cargo.toml  README.md  example.yml
compose/: docker-compose.yml
config/: example.ini  pokemon
src/: main.rs
src/ai/: chat.rs  image.rs  mod.rs
src/config/: mod.rs
src/history/: file.rs
src/message_parsers/: mod.rs
src/modules/: EntityRecognition.rs  audio.rs  calendar.rs  database.rs  mod.rs  pokeapi.rs  weather.rs
