[package]
name = "waifu_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.19"
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.28.2", features = ["rt-multi-thread", "macros"] }
base64 = "0.21.2"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
regex = "1.8.4"
rand = "0.8.5"
ureq = "2.6.2"
url = "2.4.0"
chrono = "0.4"
minicaldav = "0.7.0"
rustemon = "3.2.0"
dotenv = "0.15.0"
rust-ai = "0.1.19"
